iniciando o responsivo do site

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li class="header__item"><a href="#">Experiência</a></li>
                     <li class="header__item"><a href="#">Projetos</a></li>
                 </ul>
+                <button class="header__btn"><i class="fa-solid fa-bars"></i></button>
             </nav>
         </div>
     </header>
@@ -89,13 +90,29 @@
         <section class="projetos">
             <div class="projetos__container container">
                 <h2 class="projetos__titulo">Projetos</h2>
-                <article class="projetos__card">
-                    <img src="https://place-hold.it/400x150" alt="">
-                    <h3 class="projetos__subtitulo">Nome do projeto</h3>
-                    <p class="projetos__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quisquam, animi ipsum veniam aliquid praesentium aut.</p>
-                    <p class="projetos__tecnologias">Tecnologias usadas no projeto</p>
-                    <a href="" class="btn-padrao btn--visualizar"></a>
-                </article>
+                <div class="projetos__cards">
+                    <article class="projetos__card">
+                        <img class="card__imagem" src="https://place-hold.it/400x150" alt="">
+                        <h3 class="card__titulo">Nome do projeto</h3>
+                        <p class="card__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quisquam, animi ipsum veniam aliquid praesentium aut.</p>
+                        <p class="card__tecnologias">Tecnologias usadas no projeto</p>
+                        <a href="" class="btn-padrao btn--visualizar"><i class="fa-solid fa-link"></i>Visualizar</a>
+                    </article>
+                    <article class="projetos__card">
+                        <img class="card__imagem" src="https://place-hold.it/400x150" alt="">
+                        <h3 class="card__titulo">Nome do projeto</h3>
+                        <p class="card__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quisquam, animi ipsum veniam aliquid praesentium aut.</p>
+                        <p class="card__tecnologias">Tecnologias usadas no projeto</p>
+                        <a href="" class="btn-padrao btn--visualizar"><i class="fa-solid fa-link"></i>Visualizar</a>
+                    </article>
+                    <article class="projetos__card">
+                        <img class="card__imagem" src="https://place-hold.it/400x150" alt="">
+                        <h3 class="card__titulo">Nome do projeto</h3>
+                        <p class="card__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quisquam, animi ipsum veniam aliquid praesentium aut.</p>
+                        <p class="card__tecnologias">Tecnologias usadas no projeto</p>
+                        <a href="" class="btn-padrao btn--visualizar"><i class="fa-solid fa-link"></i>Visualizar</a>
+                    </article>
+                </div>
             </div>
         </section>
     </main>
