Ajustando caminhos dos estilos css

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Handryo Casali</title>
-    <link rel="stylesheet" href="/Assets/styles/reset.css">
-    <link rel="stylesheet" href="/Assets/styles/styles.css">
-    <link rel="stylesheet" href="/Assets/styles/header.css">
-    <link rel="stylesheet" href="/Assets/styles/banner.css">
-    <link rel="stylesheet" href="/Assets/styles/sobre.css">
-    <link rel="stylesheet" href="/Assets/styles/experiencia.css">
-    <link rel="stylesheet" href="/Assets/styles/projetos.css">
-    <link rel="stylesheet" href="/Assets/styles/footer.css">
+    <link rel="stylesheet" href="Assets/styles/reset.css">
+    <link rel="stylesheet" href="Assets/styles/styles.css">
+    <link rel="stylesheet" href="Assets/styles/header.css">
+    <link rel="stylesheet" href="Assets/styles/banner.css">
+    <link rel="stylesheet" href="Assets/styles/sobre.css">
+    <link rel="stylesheet" href="Assets/styles/experiencia.css">
+    <link rel="stylesheet" href="Assets/styles/projetos.css">
+    <link rel="stylesheet" href="Assets/styles/footer.css">
 </head>
 
 <body>
@@ -72,7 +72,7 @@
                                 class="fa-brands fa-whatsapp"></i></a>
                     </ul>
                     <div class="sobre__btn">
-                        <a class="button--curriculo btn-padrao" href="/Assets/downloads/Curriculo-Handryo.pdf"
+                        <a class="button--curriculo btn-padrao" href="Assets/downloads/Curriculo-Handryo.pdf"
                             download=""><i class="fa-solid fa-cloud-arrow-down"></i> Curriculo</a>
                         <a class="button--email btn-padrao" href="mailto:handryo@hotmail.com"><i
                                 class="fa-solid fa-envelope"></i> E-mail</a>
