Ajustando numero de telefone wpp

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/HandryoCasali" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
-                        <a href="https://api.whatsapp.com/send?phone=44998694442&text=Oi." target="_blank"><i
+                        <a href="https://api.whatsapp.com/send?phone=+5544998694442&text=Oi." target="_blank"><i
                                 class="fa-brands fa-whatsapp"></i></a>
                     </ul>
                     <div class="sobre__btn">
