transformando botões em componentes

--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
                     desenvolvimento.</h1>
                 <div class="banner__buttons">
                     <a href="https://www.linkedin.com/in/handryo-casali/" target="_blank" title="Ver perfil no LinkedIn"
-                        class="button-linkedin btn-padrao" alt="Ver perfil no LinkedIn"><i
+                        class="btn-padrao btn-padrao-purple" alt="Ver perfil no LinkedIn"><i
                             class="fa-brands fa-linkedin-in"></i>LinkedIn</a>
-                    <a href="https://github.com/HandryoCasali" target="_blank" class="button-github btn-padrao"
-                        title="Ver perfil no GitHub" alt="Ver perfil no GitHub"><i
-                            class="fa-brands fa-github"></i>GitHub</a>
+                    <a href="https://github.com/HandryoCasali" target="_blank"
+                        class="btn-padrao btn-padrao-pink" title="Ver perfil no GitHub"
+                        alt="Ver perfil no GitHub"><i class="fa-brands fa-github"></i>GitHub</a>
                 </div>
             </div>
         </section>
 
         <section id="sobre" class="sobre">
             <div class="sobre__container container">
-                <!-- sla oq colocar de alt -->
+
                 <img class="sobre__imagem" src="Assets/img/fotinha-de-mim.jpeg"
                     title="Foto de um menino em busca de uma vaguinha pra estágio/trainee/dev jr. xD"
                     alt="Imagem do autor do portifólio">
@@ -72,9 +72,9 @@
                                 class="fa-brands fa-whatsapp"></i></a>
                     </ul>
                     <div class="sobre__btn">
-                        <a class="button--curriculo btn-padrao" href="Assets/downloads/Curriculo-Handryo.pdf"
+                        <a class="btn-padrao btn-padrao-pink" href="Assets/downloads/Curriculo-Handryo.pdf"
                             download=""><i class="fa-solid fa-cloud-arrow-down"></i> Curriculo</a>
-                        <a class="button--email btn-padrao" href="mailto:handryo@hotmail.com"><i
+                        <a class="btn-padrao btn-padrao-purple" href="mailto:handryo@hotmail.com"><i
                                 class="fa-solid fa-envelope"></i> E-mail</a>
                     </div>
                 </div>
@@ -93,6 +93,7 @@
                     <div class="conteudo">
                         <article class="experiencia__conteudo experiencia__conteudo-ativo">
                             <div class="d-flex">
+                                <!-- Div só pra colocar display flex é gambiarra! -->
                                 <h3 class="experiencia__conteudo__titulo">Professor de música - Violão</h3>
                                 <span class="experiencia__data">Jan. 2019 a Dez. 2021</span>
                             </div>
@@ -107,7 +108,9 @@
                                 <span class="experiencia__data">Jul. 2017 a Fev. 2018</span>
                             </div>
                             <h4 class="experiencia__conteudo__subtitulo">Padaria Cerro Azul</h4>
-                            <p class="experiencia__conteudo__paragrafo">Responsável pela organização do estoque, recebimentos e organização de mercadorias, organização do setor de vendas, limpeza e organização das câmaras frias.</p>
+                            <p class="experiencia__conteudo__paragrafo">Responsável pela organização do estoque,
+                                recebimentos e organização de mercadorias, organização do setor de vendas, limpeza e
+                                organização das câmaras frias.</p>
                         </article>
                         <article class="experiencia__conteudo">
                             <div class="d-flex">
@@ -115,7 +118,9 @@
                                 <span class="experiencia__data">Jun. 2016 a Mai. 2017</span>
                             </div>
                             <h4 class="experiencia__conteudo__subtitulo">Paróquia São Paulo Apóstolo</h4>
-                            <p class="experiencia__conteudo__paragrafo">Responsável pelo Controle do fluxo do caixa, atendimento ao público, envio de malotes para o escritório de contabilidade, lançamentos contábeis, acompanhamento do extrato bancário, pagamento e recebimento de contas.</p>
+                            <p class="experiencia__conteudo__paragrafo">Responsável pelo Controle do fluxo do caixa,
+                                atendimento ao público, envio de malotes para o escritório de contabilidade, lançamentos
+                                contábeis, acompanhamento do extrato bancário, pagamento e recebimento de contas.</p>
                         </article>
                     </div>
                 </div>
@@ -133,7 +138,7 @@
                             construído durante as aulas de front-end no curso do SENAI.</p>
                         <p class="card__tecnologias">Angular, TypeScript, Styled Components.</p>
                         <a href="https://handryocasali.github.io/senai-gamemania-angular/" target="_blank"
-                            class="btn-padrao btn--visualizar"><i class="fa-solid fa-link"></i>Visualizar</a>
+                            class="btn-padrao btn-padrao-purple"><i class="fa-solid fa-link"></i>Visualizar</a>
                     </article>
                     <article class="projetos__card">
                         <img class="card__imagem" src="Assets/img/cadastro-pessoas.png" alt="">
@@ -142,7 +147,7 @@
                             pessoas jurídicas. Projeto construído durante as aulas de back-end no curso do SENAI.</p>
                         <p class="card__tecnologias">C# .Net cli.</p>
                         <a href="https://github.com/HandryoCasali/senai-uc12-sa2" target="_blank"
-                            class="btn-padrao btn--visualizar"><i class="fa-solid fa-link"></i>Visualizar</a>
+                            class="btn-padrao btn-padrao-purple"><i class="fa-solid fa-link"></i>Visualizar</a>
                     </article>
                     <article class="projetos__card">
                         <img class="card__imagem" src="Assets/img/portfolio.png" alt="">
@@ -151,7 +156,7 @@
                         </p>
                         <p class="card__tecnologias">Html, Css, JS.</p>
                         <a href="https://github.com/HandryoCasali/senai-uc12-sa2" target="_blank"
-                            class="btn-padrao btn--visualizar"><i class="fa-solid fa-link"></i>Visualizar</a>
+                            class="btn-padrao btn-padrao-purple"><i class="fa-solid fa-link"></i>Visualizar</a>
                     </article>
 
                 </div>
